--- a/webapp/docker-compose/go.yaml
+++ b/webapp/docker-compose/go.yaml
@@ -15,6 +15,10 @@ services:
       MYSQL_PASSWORD: isucon
     ports:
       - "3306:3306"
+    ulimits:
+      nofile:
+        soft: 98304
+        hard: 98304
 
   api-server:
     build: ../go
@@ -49,6 +53,8 @@ services:
     volumes:
         - ../../provisioning/ansible/roles/web-bootstrap/files/nginx.conf.template:/etc/nginx/nginx.conf.template
         - ../logs/nginx:/var/log/nginx
+        - ../nginx/sysctl.conf:/etc/sysctl.conf
+        - ../nginx/nginx.conf:/etc/nginx/nginx.conf
         - ../nginx/conf.d:/etc/nginx/conf.d
         - ../nginx/out:/www/data
     ports:
